[gd_scene load_steps=12 format=3 uid="uid://c1gavo2oe62q7"]

[ext_resource type="Script" path="res://Scenes/l_city_defender.gd" id="1_4754e"]
[ext_resource type="Texture2D" uid="uid://3jc0qe4jcy42" path="res://assets/animal sprites/bear.png" id="2_7skvw"]
[ext_resource type="Texture2D" uid="uid://32extdvluool" path="res://Image & Music/orderNotif.png" id="3_107a3"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vhh03"]
radius = 11.5
height = 44.0

[sub_resource type="AtlasTexture" id="AtlasTexture_d1gvo"]
atlas = ExtResource("2_7skvw")
region = Rect2(0, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k8nw2"]
atlas = ExtResource("2_7skvw")
region = Rect2(48, 0, 48, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ask2r"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d1gvo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k8nw2")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_6bpl4"]
radius = 70.0

[sub_resource type="Animation" id="Animation_pfeft"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.588235, 0, 0.596078, 0)]
}

[sub_resource type="Animation" id="Animation_j0x5m"]
resource_name = "enemyTooKDamage"
length = 0.2
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.588235, 0, 0.596078, 0.784314), Color(0.161863, 0.400458, 0.174916, 0.784314)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vdvym"]
_data = {
"RESET": SubResource("Animation_pfeft"),
"enemyTooKDamage": SubResource("Animation_j0x5m")
}

[node name="L_cityDefender" type="Area2D" groups=["enemy"]]
script = ExtResource("1_4754e")
maxSpeed = 300.0
maxSize = 1500.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(3, 2)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_vhh03")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
clip_children = 2
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_ask2r")
autoplay = "default"
frame_progress = 0.909706

[node name="ColorRect" type="ColorRect" parent="AnimatedSprite2D"]
offset_left = -37.0
offset_top = -19.0
offset_right = 38.0
offset_bottom = 21.0
color = Color(0.588235, 0, 0.596078, 0)

[node name="playerNoticedNotif" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(-4.76837e-07, -11)
scale = Vector2(0.171875, 0.15625)
texture = ExtResource("3_107a3")

[node name="detectionRadius" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="detectionRadius"]
shape = SubResource("CircleShape2D_6bpl4")

[node name="speedRandomiseTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="playerDetectedTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_vdvym")
}

[node name="tookDamageTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="chargeTimer" type="Timer" parent="."]
wait_time = 1.5

[node name="chargingWarningTimer" type="Timer" parent="."]

[node name="projTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_entered" from="detectionRadius" to="." method="_on_area_2d_area_entered"]
[connection signal="timeout" from="speedRandomiseTimer" to="." method="_on_speed_randomise_timer_timeout"]
[connection signal="timeout" from="playerDetectedTimer" to="." method="_on_player_detected_timer_timeout"]
[connection signal="timeout" from="chargeTimer" to="." method="_on_charge_timer_timeout"]
[connection signal="timeout" from="projTimer" to="." method="_on_proj_timer_timeout"]
